fix broker package dates, fix datepicker, add Collapse

--- a/components/HackneyDS/DatePicker/style.scss
+++ b/components/HackneyDS/DatePicker/style.scss
@@ -77,10 +77,46 @@
   }
 }
 
+.date-picker__additional-action {
+  width: 26px;
+  height: 26px;
+  margin-left: 10px;
+  border-radius: 4px;
+  padding: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.clear-datepicker {
+    svg path {
+      fill: $lbh-red;
+    }
+  }
+
+  &.restore-date {
+    svg {
+      fill: $lbh-primary;
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: $lbh-gray;
+  }
+}
+
 .date-picker__calendar-container {
   display: inline-block;
   position: relative;
   z-index: 2;
+
+  .date-picker__additional-action {
+    margin-left: 0;
+
+    svg path {
+      fill: $lbh-blue-highlight
+    }
+  }
 
   & > svg:hover {
     cursor: pointer;
